# x86emu

./: Cargo.toml  README.md
src/: decoder.rs  dispatch.rs  guest.rs  instruction.rs  instruction_set.rs  instructions.rs  interpreter.rs  lib.rs  machine_state.rs  main.rs  memory.rs  mmu.rs  state.rs  uefi.rs
src/cpu/: emu_debug.rs  emu_instructions.rs
src/loader/: dump.rs  linux.rs  pe.rs
