[package]
name = "x86emu"
version = "0.0.0"
authors = ["fotcorn <fotcorn@gmail.com>", "Matthias Fauconneau <matthias.fauconneau@gmail.com"]
edition = '2018'

[dependencies]
goblin = ""
zero = ""
bitflags = ""
clap = ""
time = ""
fnv = ""
serde = ""
serde_derive = ""
bincode = ""
extprim = ""
syscall = ""
