[package]
name= 'x86emu'
version= '0.0.0'
authors= ['Matthias Fauconneau <matthias.fauconneau@gmail.com']
edition= '2018'

[dependencies]
log= ''
env_logger= ''
fnv= ''
bitflags= ''
signal-hook= ''
itertools= ''
#object= ''
#gimli= ''
#unwind= ''
#addr2line= ''

#gimli = { path = "gimli" }
#unwind = { path = "unwind/unwind" }
#addr2line = { path = "addr2line" } #object v0.18
